--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,3 +1,12 @@
 <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
 <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
+<link href="{{ root_url }}/stylesheets/prettygist.min.css" rel="stylesheet" type="text/css">
+<script src="{{ root_url }}/js/jquery.prettygist.min.js"></script>
+<script>
+    $(document).ready(function(){
+        $(".gist").prettyGist();
+    });
+</script>
+
+
