migrate to bootstrap 3

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -2,8 +2,7 @@
 
 @import "colors";
 @import "custom/colors";
-@import "bootstrap";
-@import "bootstrap-responsive";
+@import "bootstrap/bootstrap";
 @import "flat-ui";
 @import "font-awesome/font-awesome";
 @import "octoflat-partials";
