--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -1,5 +1,5 @@
 {% include custom/navigation.html %}
-<ul class="nav pull-right">
+<ul class="nav navbar-nav pull-right">
     <li><a href="{{ site.subscribe_rss }}" title="RSS Feed"><i class="icon-rss-sign social-navbar"></i></a></li>
     {% if site.github_user %}
     <li><a href="http://github.com/{{ site.github_user }}" title="Github Profile"><i class="icon-github-sign social-navbar"></i></a></li>
