--- a/sass/_flat-ui.scss
+++ b/sass/_flat-ui.scss
@@ -545,7 +545,10 @@ h6 {
   .demo-browser {
     background-image: url("../images/demo/browser-2x.png"); } }
 .navbar {
-  font-size: 18px; }
+  font-size: 18px;
+  border: 0px;
+  margin-bottom: 0px;
+  }
   .navbar .brand {
     color: $tertiary-color;
     font-size: inherit;
@@ -635,13 +638,16 @@ h6 {
         background-color: $tertiary-color; }
 
 .navbar-inner {
+  min-height: 60px;
   border: none;
   padding-left: 4px;
   padding-right: 4px;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false); }
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+  .container {
+      padding-left: 0px;
+      padding-right: 0px;
+  }
+  }
 
 .navbar-inverse .navbar-inner {
   background: $navbar-color;
@@ -2582,7 +2588,12 @@ body.vjs-full-window {
   font-family: "Quicksand";
   position: relative;
   padding: 70px 0;
-  color: $primary-color; }
+  color: $primary-color;
+  background-color: $bg-color !important;
+  margin-bottom: 0px !important;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+  }
 .jumbotron:after {
   content: '';
   display: block;
@@ -2667,3 +2678,34 @@ a:hover > .badge {
 }
 
 }
+
+.navbar .navbar-btn {
+  display: none;
+  float: right;
+  padding: 15px 10px;
+  margin-right: 5px;
+  margin-left: 5px;
+  color: #ffffff;
+  background-color: #ededed;
+  *background-color: #e5e5e5;
+  background-image: -moz-linear-gradient(top, #f2f2f2, #e5e5e5);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f2f2f2), to(#e5e5e5));
+  background-image: -webkit-linear-gradient(top, #f2f2f2, #e5e5e5);
+  background-image: -o-linear-gradient(top, #f2f2f2, #e5e5e5);
+  background-image: linear-gradient(to bottom, #f2f2f2, #e5e5e5);
+  background-repeat: repeat-x;
+  border-color: #e5e5e5 #e5e5e5 #bfbfbf;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff2f2f2', endColorstr='#ffe5e5e5', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.075);
+     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.075);
+          box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.075);
+}
+
+@media (max-width: 767px) {
+    .navbar .navbar-btn {
+        display: block;
+    }
+}
+
