--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -1,7 +1,7 @@
 {% unless page.no_header %}
 {% if index %}
-  <div class="row-fluid">
-    <div class="span2 post-meta">
+  <div class="row">
+    <div class="col-md-2 post-meta">
 	  <h5 class="date-time">{% include post/date.html %}<i class="icon-calendar-empty"></i> {{ time }}</h5>
           <div class="row-fluid">
           {% if site.disqus_short_name and page.comments != false and post.comments != false and site.disqus_show_comment_count == true %}
@@ -9,14 +9,14 @@
           {% endif %}
           </div>
           {% if post.categories %}
-          <div class="row-fluid">
+          <div class="row">
           {% for category in post.categories %}
           <a href="{{ root_url }}/{{ site.category_dir }}/{{ category | split: " " | join: "-" | downcase }}/"><span class="badge">{{ category }}</span></a>
           {% endfor %}
           </div>
           {% endif %}
     </div>
-    <div class="span10 post-container">
+    <div class="col-md-10 post-container">
       <h1 class="link"><a href="{{ root_url }}{{ post.url }}">{{ post.title }}</a></h1>
       {{ content | excerpt }}
       {% capture excerpted %}{{ content | has_excerpt }}{% endcapture %}
@@ -30,8 +30,8 @@
 	<h5>{% include post/date.html %}<i class="icon-calendar-empty"></i> {{ time }}</h5>
   </div>
 </header>
-  <div class="row-fluid">
-    <div class="span12">
+  <div class="row">
+    <div class="col-md-12">
       {{ content }}
     </div>
   </div>
