--- a/source/_layouts/category_index.html
+++ b/source/_layouts/category_index.html
@@ -6,15 +6,15 @@ footer: false
 <div id="blog-archives" class="category">
 {% for post in site.categories[page.category] %}
   {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
-  <div class="row-fluid">
-    <div class="span1">
+  <div class="row">
+    <div class="col-md-1">
   	{% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
   	{% unless year == this_year %}
   	  {% assign year = this_year %}
   	    <h2>{{ year }}</h2>
   	{% endunless %}
     </div>
-    <div class="span11">
+    <div class="col-md-11">
       <article>
   	{% include archive_post.html %}
   	</article>
