--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -4,22 +4,22 @@
   <div class="navbar navbar-inverse navbar-static-top">
   	<div class="navbar-inner">
   	  <div class="container">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+        <a class="btn navbar-btn" data-toggle="collapse" data-target=".navbar-responsive-collapse">
           <span class="fui-menu-24"></span>
         </a>
-  	  	<div class="nav-collapse collapse navbar-responsive-collapse" style="height:0;">
+  	  	<div class="navbar-collapse collapse navbar-responsive-collapse" style="height:0;">
   	      {% include navigation.html %}
   	    </div>
   	  </div>
   	</div>
   </div>
   <div class="container" id="main">
-      <div class="row-fluid">
+      <div class="row">
         <div id="content">
           {{ content | expand_urls: root_url }}
         </div>
       </div>
-      <div class="row-fluid">
+      <div class="row">
         <footer class="footer-page" role="contentinfo">
           {% include footer.html %}
         </footer>
