--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -26,6 +26,7 @@
   <link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
   <script src="/js/jquery.js"></script>
   <script src="/js/bootstrap-collapse.js"></script>
+  <script src="/js/bootstrap-transition.js"></script>
   <script src="{{ root_url }}/js/modernizr-2.0.js"></script>
   <script src="{{ root_url }}/js/octopress.js" type="text/javascript"></script>
   <script src="/js/application.js"></script>
