update jquery & modernizr

--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -28,7 +28,7 @@
   <script src="/js/bootstrap-collapse.js"></script>
   <script src="/js/bootstrap-transition.js"></script>
   <script src="{{ root_url }}/js/modernizr-2.0.js"></script>
-  <script src="{{ root_url }}/js/octopress.js" type="text/javascript"></script>
+  <script src="{{ root_url }}/js/octopress.js"></script>
   <script src="/js/application.js"></script>
   {% include custom/head.html %}
   {% include google_analytics.html %}
